server: add/edit scene
